--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   shared_preferences: ^2.2.0
   provider: ^6.0.5
   retrofit: ^4.0.1
+  fluttertoast: ^8.2.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
   flutter_test:
