--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.2.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  animated_splash_screen: ^1.3.0
 
 dev_dependencies:
   flutter_test:
