--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,9 +39,8 @@ dependencies:
   provider: ^6.0.5
   retrofit: ^4.0.1
   fluttertoast: ^8.2.2
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   animated_splash_screen: ^1.3.0
+  sqflite: ^2.3.0
 
 dev_dependencies:
   flutter_test:
