--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   fluttertoast: ^8.2.2
   animated_splash_screen: ^1.3.0
   sqflite: ^2.3.0
+  flutter_easyloading: ^3.0.5
 
 dev_dependencies:
   flutter_test:
