--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   sqflite: ^2.3.0
   flutter_easyloading: ^3.0.5
+  path: ^1.8.3
 
 dev_dependencies:
   flutter_test:
