--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.3.0
   flutter_easyloading: ^3.0.5
   path: ^1.8.3
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
